Fix overlapping of buttons

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -9748,7 +9748,8 @@ button.bg-dark:focus {
 }
 
 .right {
-  float: right;
+  position: absolute;
+  right: 0;
 }
 
 .mid {
